--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.pyc
 *~
+*.egg-info/
+.installed.cfg
+.mr.developer.cfg
 .coverage
 artifacts
 build
@@ -22,3 +25,18 @@ doc/html/reqs
 doc/presentations/reqspricing.dot
 doc/presentations/reqspricing.png
 ttt
+bin/buildout
+bin/coverage
+bin/ctags
+bin/develop
+bin/pylint
+bin/python
+bin/sphinx-build
+bin/sphinx-quickstart
+bin/test
+bin/rst2pdf
+develop-eggs/
+parts/
+docs/build/
+var
+bootstrap.py
