--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ doc/html/reqs
 doc/presentations/reqspricing.dot
 doc/presentations/reqspricing.png
 ttt
+bin/rmtoo
 bin/buildout
 bin/coverage
 bin/ctags
